--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,17 +25,18 @@
     "react-typewriter-hook": "^1.0.2"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.14.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "sass": "^1.70.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.8"
   }
 }
