--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^5.3.4",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typewriter-hook": "^1.0.2"
   },
